fix: добавил overflow-y: auto
Чтобы на маленьких экранах появлялся скрол, тк страница full-page

--- a/src/scss/config/global.scss
+++ b/src/scss/config/global.scss
@@ -5,6 +5,7 @@
   overflow: hidden;
   &_fullscreen {
     height: 100vh;
+    overflow-y: auto;
   }
 }
 .page {
@@ -36,7 +37,7 @@
 body {
   &._sidebar-show {
     .sidebar {
-      width: 45px;
+      width: rem(45);
       &__button {
         &_hide {
           opacity: 0;
